--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,8 @@
 layout: default
 current: post
 class: post-template
-disqus: false
+disqus: true
+comments: true
 ---
 
 <!-- default -->
@@ -94,23 +95,27 @@ into the {body} of the default.hbs template -->
                 <section class="post-full-comments">
                     <div id="disqus_thread"></div>
                     <script>
+                        /**
+                        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+                        */
+
                         var disqus_config = function () {
-                            var this_page_url = '{{ site.url }}{{ page.url }}';
-                            var this_page_identifier = '{{ page.id }}';
-                            var this_page_title = '{{ page.title }}';
+                        this.page.url = "{{ site.url }}{{ page.url }}";  // Replace PAGE_URL with your page's canonical URL variable
+                        this.page.identifier = "{{ page.url }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                         };
-                        (function() {
-                            var d = document, s = d.createElement('script');
-                            s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
-                            s.setAttribute('data-timestamp', +new Date());
-                            (d.head || d.body).appendChild(s);
+
+                        (function() { // DON'T EDIT BELOW THIS LINE
+                        var d = document, s = d.createElement('script');
+                        s.src = 'https://notacao-musical.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
                         })();
                     </script>
+                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                 </section>
             {% endif %}
-
         </article>
-
     </div>
 </main>
 
